--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TELEGRAM_BOT_TOKEN=your_bot_token_here
+TELEGRAM_BOT_TOKEN=7333104516:AAGghODBtyAk6mM8qK4Sa5jTLeFmFpNU8GM
 SHEET_ID=1-EHBQqSW4f6cRLgiOC-9I5_RAlslV7EfYIS1qAQuCsM
 ADMIN_ID=your_telegram_id_here
